--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@
 	margin: 40px auto;
 	border: 3px solid black;
 	width: 600px;
-	height: 700px;
+	min-height: 0;
 	border-radius: 10px;
 	padding: 10px 0;
 
